syntax = "proto3";

package intr.v1;  //产物包的别名
option go_package = "intr/v1;intrv1";

service InteractiveService  {
  rpc IncreaseReadCnt(IncreaseReadCntRequest) returns(IncreaseReadCntResponse);
  rpc  Like(LikeRequest) returns(LikeResponse);
  rpc CancelLike(CancelLikeRequest) returns(CancelLikeResponse);
  rpc Collect(CollectRequest) returns(CollectResponse);
  rpc CancelCollect(CancelCollectRequest) returns(CancelCollectResponse);
  rpc Get(GetRequest) returns(GetResponse);
  rpc GetByIds(GetByIdsRequest) returns(GetByIdsResponse);
}

/*阅读数+1*/
message IncreaseReadCntRequest{
  string biz = 1;
  int64 biz_id = 2;
}

message IncreaseReadCntResponse{

}

/*点赞数+1*/
message LikeRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 user_id = 3;
}

message LikeResponse{

}

/*点赞数-1*/
message CancelLikeRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 user_id = 3;
}

message CancelLikeResponse{

}

/*收藏数+1*/
message CollectRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 collect_id = 3;
  int64 user_id = 4;
}

message CollectResponse{

}

/*收藏数-1*/
message CancelCollectRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 collect_id = 3;
  int64 user_id = 4;
}

message CancelCollectResponse{

}

/*联合查询*/
message GetRequest{
  string biz = 1;
  int64 biz_id = 2;
  int64 user_id = 3;
}

message GetResponse{
  Interactive intr = 1;
}



/*批量查询*/
message GetByIdsRequest{
  string biz = 1;
  repeated int64 biz_ids = 2;  //数组形式
}

message GetByIdsResponse{
  map<int64, Interactive> intrs = 1;
}

message Interactive {
  string  biz             = 1;
  int64   biz_id          = 2;
  int64   read_cnt        = 3;
  int64   like_cnt        = 4;
  int64   collect_cnt     = 5;
  bool    liked           = 6;
  bool    collected       = 7;
}